fixing title fuzzines on chrome, and content cut off

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,13 +6,13 @@
       *{ -ms-filter: grayscale(100%); -o-filter: grayscale(100%);  filter: gray; /* IE 6-9 */
          color: #000 !important; background-color: transparent !important;}
 
-      .title { -webkit-filter: grayscale(100%) !important; -moz-filter: grayscale(100%) !important;
+      .title {  -moz-filter: grayscale(100%) !important;
         -ms-filter: grayscale(100%) !important;   -o-filter: grayscale(100%) !important; filter: gray !important; /* IE 6-9 */
          color: #000 !important; background-color: transparent !important;}
 
       a[href]:after { content: none !important; }
 
-      @page {   margin: 50px;}
+      @page { margin: 50px;}
 
       * { font-size: 8pt !important; line-height: 1; }
 
@@ -35,6 +35,8 @@
       .spacer, .spacer10, .spacer25, .spacer40, .spacer60, .spacer80, .spacer100, .spacer120 { display: none !important; height: 0;}
 
       #searchResults { width: 98% !important;}
+
+      #main-container, .container { width: 95% !important;}
    } /* End of @Media Print */
 
 
